# brew-notifier

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
brew_notifier/: __init__.py  asgi.py  celery.py  celeryapp.py  settings.py  urls.py  views.py  wsgi.py
nginx/: nginx.conf
notifier/: admin.py  consts.py  managers.py  models.py  notifier.py  tasks.py  urls.py  utils.py  views.py
notifier/api/: serializers.py  urls.py  views.py
notifier/migrations/: 0001_initial.py  0002_alter_companycompetitor_company_and_more.py  0002_event_uuid.py  0003_alter_companycompetitor_company_and_more.py  0003_alter_event_uuid.py  0004_alter_contentitem_company.py  0004_alter_event_is_blacklisted_alter_event_is_deleted_and_more.py  0005_alter_companyforevent_event.py  0005_alter_event_end_date.py  0006_alter_companyforevent_company_and_more.py  0006_company_webinar_alter_event_description_and_more.py  0007_alter_contentitem_link.py
notifier/subscribers/: base_subscriber.py  console.py
notifier/tests/: notifiers_test.py
project/: Managers.py  db.json  entities.py  managers.py  notifier.py  test.py
project/subscribers/: base_subscriber.py  console.py
scripts/docker/: celery-entrypoint.sh  django-entrypoint.sh  entrypoint.sh
tests/: notifiers_test.py
