[tool.poetry]
name = "brew-notifier"
version = "0.1.0"
description = ""
authors = ["Adir <adir@gebrew.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.0"
pytest = "^7.1.2"
brew-common = {version = "^1.4.12", source = "brew"}
uuid = "^1.30"
pytest-django = "^4.5.2"
requests = "^2.28.1"
djangorestframework = "3.12.4"
Markdown = "^3.3.7"
django-filter = "^22.1"
django-environ = "^0.9.0"
celery = "^5.2.7"
flower = "^1.1.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "brew"
url = "https://brew-707084527875.d.codeartifact.us-east-1.amazonaws.com/pypi/brew/simple"
secondary = true
